--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,11 @@ repositories {
 dependencies {
     testImplementation group: 'org.testng', name: 'testng', version: '7.3.0'
     testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.3.3'
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG()
+    //useJUnitPlatform()
 }
